# sfio

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt
client/: EventLoop.js  Field.js  InputActionsProcessor.js  MainPage.jsx  PacketManager.js  PlayerProcessor.js  RootComponent.jsx  SpawnDialog.jsx  ThreeWidget.jsx  UserDialog.jsx  actions.js  entry.jsx  index.html  networkService.js  package.json  page.html~  reducers.js  state.js  webpack.config.js
client/app/: application.js  application.js.map
client/pb/: handshake.js  incomingmessage.js  scene.js  shoot.js  spawn.js  thrust.js  vec2f.js
client/styles/: main.css  main.styl
proto/: CMakeLists.txt  gamemessage.proto  vector2.proto
server/: ActionProcessor.hpp  CMakeLists.txt  Client.hpp  GameField.cpp  GameField.hpp  GameServer.hpp  GameServerWS.cpp  GameServerWS.hpp  GeoSpatialIndex.hpp  LobbyServer.hpp  Node.cpp  Node.hpp  PacketFactory.cpp  PacketFactory.hpp  PacketFactoryT.cpp  Parameter.hpp  Player.cpp  Player.hpp  QuadTree.cpp  QuadTree.hpp  StateDumper.cpp  StateDumper.hpp  main.cpp  message.hpp  ws.cpp
